using form group to demo validation and pulling the object out

--- a/src/app/joke-component/joke-component.html
+++ b/src/app/joke-component/joke-component.html
@@ -1,7 +1,8 @@
 <p>joke-component works!</p>
 
+
 {{this.jokeService.getJoke() | async}}
 
-<form (submit)="updateJoke()">
-    <input id="myJoke" [(ngModel)]="myJoke" name="myJoke" />
+<form (submit)="updateJoke()" [formGroup]="jokeForm">
+    <input id="myJoke" formControlName="joke" name="myJoke" />
 </form>
